--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "daisyui": "^4.12.11",
     "eslint": "^9.10.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.12",
